# LimitWatcher

./: .gitignore  GEMINI_IMPLEMENTATION.md  package-lock.json  package.json  project.context.md
docs/: PHASE-0-SETUP.md  PHASE-1-CORE.md  PHASE-2-PROVIDERS.md  PHASE-3-UI.md  PHASE-4-POLISH.md  README.md
docs/providers/: ANTIGRAVITY.md  CLAUDE.md  COPILOT.md  GEMINI.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  notifications.rs  scheduler.rs  tray.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/providers/: antigravity.rs  claude.rs  copilot.rs  gemini.rs  mod.rs  traits.rs
src-tauri/src/storage/: cache.rs  encrypted.rs  keyring.rs  mod.rs
src/components/: Settings.tsx
src/components/providers/: CopilotAuth.tsx  GeminiAuth.tsx
