[package]
name = "tauri-applimits-watcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_applimits_watcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-shell = "2.3.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-http = "2.5.6"
keyring = "3.6.3"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.9.2"
base64 = "0.22.1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "cookies"] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
hostname = "0.4.2"
whoami = "2.1.0"
log = "0.4.29"

